RESOLVED FIXED147156
ObjectPatternNode's entry should use "const Identifier&" instead of "Identifier"
https://bugs.webkit.org/show_bug.cgi?id=147156
Summary ObjectPatternNode's entry should use "const Identifier&" instead of "Identifier"
Saam Barati
Reported 2015-07-21 12:03:28 PDT
...
Attachments
patch (1.25 KB, patch)
2015-07-21 12:31 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2015-07-21 12:31:44 PDT
Andreas Kling
Comment 2 2015-07-21 12:43:46 PDT
Comment on attachment 257194 [details] patch r=me
WebKit Commit Bot
Comment 3 2015-07-21 13:23:56 PDT
Comment on attachment 257194 [details] patch Clearing flags on attachment: 257194 Committed r187119: <http://trac.webkit.org/changeset/187119>
WebKit Commit Bot
Comment 4 2015-07-21 13:23:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.