ObjectPatternNode's entry should use "const Identifier&" instead of "Identifier" https://bugs.webkit.org/show_bug.cgi?id=147156

Reviewed by Andreas Kling.

* parser/Nodes.h:


Canonical link: https://commits.webkit.org/165199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187119 268f45cc-cd09-0410-ab3c-d52691b4dbfc